@@ -26,6 +26,7 @@ Import-Package: com.openexchange.caching,
  com.openexchange.mail.mime,
  com.openexchange.mail.permission,
  com.openexchange.mail.search,
+ com.openexchange.mail.threader,
  com.openexchange.mail.usersetting,
  com.openexchange.mail.utils,
  com.openexchange.mailaccount,
